FILE (GLOB_RECURSE project_SRCS "*.hpp" "*.cpp")
SET (project_HPP "${PROJECT_NAME}.hpp")
SET (project_LIB ${PROJECT_NAME})

FILE (COPY ${project_HPP} DESTINATION ${HEADER_OUTPUT_PATH})

IF (NOT DEFINED project_build_shared)
   IF (CMAKE_CROSSCOMPILING)
       SET (project_build_shared 0)
   ELSE (CMAKE_CROSSCOMPILING)
       SET (project_build_shared 1)
   ENDIF (CMAKE_CROSSCOMPILING)
ENDIF (NOT DEFINED project_build_shared)

IF (NOT DEFINED project_build_static)
   SET (project_build_static 1)
ENDIF (NOT DEFINED project_build_static)

IF (project_build_static)
    ADD_LIBRARY (staticlib STATIC ${project_SRCS})
    SET_PROPERTY (TARGET staticlib PROPERTY CXX_STANDARD 11)
    SET_PROPERTY (TARGET staticlib PROPERTY CXX_STANDARD_REQUIRED ON)
    SET_TARGET_PROPERTIES (staticlib PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${project_LIB} CLEAN_DIRECT_OUTPUT 1)
    INSTALL (TARGETS staticlib DESTINATION lib)
ENDIF (project_build_static)

IF (project_build_shared)
    ADD_LIBRARY (sharedlib SHARED ${project_SRCS})
    SET_PROPERTY (TARGET sharedlib PROPERTY CXX_STANDARD 11)
    SET_PROPERTY (TARGET sharedlib PROPERTY CXX_STANDARD_REQUIRED ON)
    SET_TARGET_PROPERTIES (sharedlib PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${project_LIB} CLEAN_DIRECT_OUTPUT 1)
    INSTALL (TARGETS sharedlib DESTINATION lib)
ENDIF (project_build_shared)
